# mlx_week6

./: README.md  pyproject.toml  sandbox.ipynb  setup.py
rlhf-qwen3-pipeline/: requirements.txt
rlhf-qwen3-pipeline/configs/: ppo_config.yaml  reward_config.yaml  sft_config.yaml
rlhf-qwen3-pipeline/notebooks/: data_exploration.ipynb  ppo_training.ipynb  reward_training.ipynb  sft_training.ipynb
rlhf-qwen3-pipeline/scripts/: run_ppo.py  run_reward_training.py  run_sft.py
rlhf-qwen3-pipeline/src/: main.py
rlhf-qwen3-pipeline/src/data/: __init__.py  dataset_loader.py  preprocessing.py
rlhf-qwen3-pipeline/src/models/: __init__.py  policy_model.py  reward_model.py  sft_model.py
rlhf-qwen3-pipeline/src/training/: __init__.py  ppo_trainer.py  reward_trainer.py  sft_trainer.py
rlhf-qwen3-pipeline/src/utils/: config.py  helpers.py
rlhf-qwen3-pipeline/tests/: test_data.py  test_models.py  test_training.py
scripts/: ppo.py  reward.py  rlhf.py  train_sft_hf.py  train_sft_new.py
